[package]
name = "cool_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ustr = "1.1.0"
logos = "0.15.0"
itertools = "0.14.0"
serde_json = "1.0.140"
either = "1.15.0"
interner = "0.2.1"
common_macros = "0.1.1"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
# for some reason LLVM needs 
zstd = "0.13"

[build-dependencies]
lalrpop = "0.22.0"
